# BattleSimulator

./: BattleSimulator.cpp  BattleSimulator.h  CMakeLists.txt  Footman.cpp  Footman.h  GameBoard.cpp  GameBoard.h  Knight.cpp  Knight.h  Rifleman.cpp  Rifleman.h  Unit.cpp  Unit.h  main.cpp
.cache/clangd/index/: BattleSimulator.cpp.F63BBC0955CC4E5B.idx  BattleSimulator.h.43A78D5E68E461C7.idx  Footman.cpp.B0BC30FBFB6C85DB.idx  Footman.h.B615E2E7E6809723.idx  GameBoard.cpp.1E12710B40A95888.idx  GameBoard.h.DED828DEC54CA711.idx  Knight.cpp.63072AEA4891B2A7.idx  Knight.h.870F652E44AE8F20.idx  Rifleman.cpp.D2AB872E40291E37.idx  Rifleman.h.EBBEA7956411B1A8.idx  Unit.cpp.D42F1855D358511F.idx  Unit.h.DB63C74DF65656F0.idx  main.cpp.95FFA0EECE0920C9.idx
